[gd_scene load_steps=20 format=3 uid="uid://c38pvspamielw"]

[ext_resource type="Script" path="res://poc/assets/scripts/main.gd" id="1_j0ii5"]
[ext_resource type="PackedScene" uid="uid://bx1ojtss4q6xc" path="res://poc/scenes/levels/dungeon_2.tscn" id="3_3oofp"]
[ext_resource type="PackedScene" uid="uid://dl4c3hhbw5max" path="res://poc/scenes/main_menu.tscn" id="4_yc5bf"]
[ext_resource type="PackedScene" uid="uid://dewbvl8yppxyi" path="res://poc/scenes/damage_number.tscn" id="5_k5bt7"]
[ext_resource type="Script" path="res://poc/assets/quests/quest_poc.gd" id="6_gulh1"]
[ext_resource type="Resource" uid="uid://c0dp35sx4iu0w" path="res://poc/assets/quests/kill_trolls.tres" id="6_h1k7r"]
[ext_resource type="Resource" uid="uid://bl634ciahvr2a" path="res://poc/assets/quests/kill_goblins.tres" id="6_vyjaa"]
[ext_resource type="Resource" uid="uid://dfp1vr0asb72d" path="res://poc/assets/quests/kill_skeletons.tres" id="7_abv55"]
[ext_resource type="PackedScene" uid="uid://y304jg6volpg" path="res://poc/scenes/ui/quest_ui_poc.tscn" id="7_d3qop"]
[ext_resource type="AudioStream" uid="uid://w2t0u6v60bjx" path="res://imported_assets/audio/Harmony.ogg" id="7_pw28q"]
[ext_resource type="AudioStream" uid="uid://v6mjp1y51k5k" path="res://imported_assets/audio/SandsOfTime.mp3" id="8_bp6xg"]
[ext_resource type="Resource" uid="uid://b57cfm3fouo4v" path="res://poc/assets/quests/dungeon_steward.tres" id="8_ek0gc"]
[ext_resource type="Resource" uid="uid://gcxnng0sb438" path="res://poc/assets/quests/rest_and_recuperation.tres" id="8_wsfpj"]
[ext_resource type="Script" path="res://poc/assets/scripts/ui/quest_log_ui_poc.gd" id="9_2b5w3"]
[ext_resource type="AudioStream" uid="uid://bug8pb2tjjyjr" path="res://imported_assets/audio/QuestCompleted.wav" id="10_m8g1c"]
[ext_resource type="Material" uid="uid://cxkx8apilh2v1" path="res://final/assets/scene_transition_material.tres" id="13_mkso1"]

[sub_resource type="Animation" id="Animation_al4iy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TransitionLayer/ColorRect:material:shader_parameter/radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.6]
}

[sub_resource type="Animation" id="Animation_73lpd"]
resource_name = "change_scene"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.768627), Color(0, 0, 0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.533333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_perform_scene_change"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TransitionLayer/ColorRect:material:shader_parameter/radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.733333, 0.866667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.6, 0.25, 0.0, 0.0, 0.25, 0.6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_khrm0"]
_data = {
"RESET": SubResource("Animation_al4iy"),
"change_scene": SubResource("Animation_73lpd")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_j0ii5")
dungeon = ExtResource("3_3oofp")
main_menu = ExtResource("4_yc5bf")
damage_number = ExtResource("5_k5bt7")
quests = Array[ExtResource("6_gulh1")]([ExtResource("8_ek0gc"), ExtResource("8_wsfpj"), ExtResource("6_vyjaa"), ExtResource("7_abv55"), ExtResource("6_h1k7r")])

[node name="World" type="Node2D" parent="." groups=["World"]]

[node name="QuestLogLayer" type="CanvasLayer" parent="."]
layer = 100
visible = false

[node name="QuestLogUI" type="Control" parent="QuestLogLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 437.0
offset_top = 4.0
offset_right = 637.0
offset_bottom = 404.0
mouse_filter = 1
script = ExtResource("9_2b5w3")
quest_ui_scene = ExtResource("7_d3qop")

[node name="ToggleQuestLog" type="Button" parent="QuestLogLayer/QuestLogUI"]
layout_mode = 0
offset_left = 45.0
offset_top = 1.0
offset_right = 167.0
offset_bottom = 22.0
text = "show/hide quest log"

[node name="ScrollContainer" type="ScrollContainer" parent="QuestLogLayer/QuestLogUI"]
layout_mode = 0
offset_left = 14.0
offset_top = 29.0
offset_right = 194.0
offset_bottom = 309.0
horizontal_scroll_mode = 0

[node name="ActiveQuestsContainer" type="VBoxContainer" parent="QuestLogLayer/QuestLogUI/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TransitionLayer" type="CanvasLayer" parent="."]
layer = 101

[node name="ColorRect" type="ColorRect" parent="TransitionLayer"]
modulate = Color(0, 0, 0, 0)
material = ExtResource("13_mkso1")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -400.0
offset_right = 400.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="TransitionLayer"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_khrm0")
}

[node name="OutdoorMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_pw28q")
volume_db = -20.0

[node name="DungeonMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_bp6xg")
volume_db = -30.0

[node name="QuestCompletedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_m8g1c")
volume_db = -20.0
